Bug 154982 - PDF/UA Signature line exported incorrectly - wrong description and location inside structure
Summary: PDF/UA Signature line exported incorrectly - wrong description and location i...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.2.0 target:7.6.0.2 target:7...
Keywords: accessibility
Depends on:
Blocks: PDF-Accessibility
  Show dependency treegraph
 
Reported: 2023-04-24 12:41 UTC by Gabor Kelemen (Collabora)
Modified: 2023-10-09 12:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the example file and its screen reader preview in PAC tool (188.64 KB, image/png)
2023-04-24 12:41 UTC, Gabor Kelemen (Collabora)
Details
example file from Writer with signature line and filled description (33.73 KB, application/vnd.oasis.opendocument.text)
2023-04-24 12:45 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of screen reader preview (126.60 KB, image/jpeg)
2023-08-19 12:05 UTC, Dieter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-04-24 12:41:42 UTC
Created attachment 186878 [details]
Screenshot of the example file and its screen reader preview in PAC tool

Attached example file is derived from attachment 186815 [details] with the signature lines description filled.

When saved as PDF with PDF/UA enabled, the signature line does not get the set description, and it appears at the beginning of the file instead of at the end.

1. Open attached file
2. File - Export As - Export as PDF, check the PDF/UA box
3. Open the file in the PAC tool and go to the Screen Reader Preview
-> The object appears at the top, and the accessible description is "512: XTEXT_PAINTSHAPE_BEGIN"
Comment 1 Gabor Kelemen (Collabora) 2023-04-24 12:45:46 UTC
Created attachment 186879 [details]
example file from Writer with signature line and filled description
Comment 2 Dieter 2023-05-07 11:22:03 UTC
I confirm it with

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 69d0be09ad81935f7da4b6f8d036c3562357d068
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (de_DE); UI: en-GB
Calc: CL threaded
Comment 3 Michael Stahl 2023-07-11 09:15:17 UTC
problem here is the shape is in hell ( style:run-through="background" ) ... not sure what to do about that ...
Comment 4 Commit Notification 2023-07-14 12:54:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9a148e4fb402d203ab0d2683dc316aa8217b576c

tdf#154982 drawinglayer: post-order traversal of ObjectInfoPrimitive2D

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-07-14 12:57:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/07d790ca473cd6e71f0343419b819fa6b485dc01

tdf#154982 vcl: PDF Export: split BeginStructureElement

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-07-14 12:57:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d467f1aa3d028f399826c97e2eecedcd79efcf65

tdf#154982 drawinglayer,svx,sw,vcl: PDF export: hell flys and shapes...

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Michael Stahl 2023-07-14 13:18:18 UTC
fixed on master
Comment 8 Commit Notification 2023-07-26 12:40:14 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/4bebff384b986c48af2b7f157cc27e956acceab6

tdf#154982 vcl: PDF Export: split BeginStructureElement

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2023-07-26 12:41:20 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/30bb38b041a44f6c30fcf0475b3cf2432dc7f5cb

tdf#154982 drawinglayer,svx,sw,vcl: PDF export: hell flys and shapes...

It will be available in 7.6.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-07-27 08:33:27 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/00c7728e128c52c6acecf022823408da2cee0be9

tdf#154982 drawinglayer: post-order traversal of ObjectInfoPrimitive2D

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-07-29 12:14:13 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-0":

https://git.libreoffice.org/core/commit/953b46f0af9029ac4027aa3ba61e5fdbb6fd2c1d

tdf#154982 drawinglayer: post-order traversal of ObjectInfoPrimitive2D

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Dieter 2023-08-19 12:04:43 UTC
Tested with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34d32740d89876c3d4fd2743a07d6e2578601683
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Description is correct now, but position is still wrong (see attached screenshot)
Comment 13 Dieter 2023-08-19 12:05:41 UTC
Created attachment 189036 [details]
Screenshot of screen reader preview
Comment 14 Michael Stahl 2023-08-21 11:10:29 UTC
(In reply to Dieter from comment #12)
> 
> Description is correct now, but position is still wrong (see attached
> screenshot)

looking at the screenshot, the position appears to be correct.
it is a child of the paragraph where the signature line shape is anchored.
Comment 15 Dieter 2023-09-06 16:41:44 UTC
(In reply to Michael Stahl (allotropia) from comment #14)
> looking at the screenshot, the position appears to be correct.
> it is a child of the paragraph where the signature line shape is anchored.

Yes I see
=> VERIFIED FIXED