tdf#154982 drawinglayer: post-order traversal of ObjectInfoPrimitive2D

For the signature line, the wrong alt-text is exported to PDF, because
the cui/source/dialogs/signature-line.svg contains lots of "desc"
elements, which are converted to ObjectInfoPrimitive2D, and currently
these are applied after the ObjectInfoPrimitive2D for the SdrObject.

So let's try to switch the order, fixes the bugdoc at least.

Change-Id: I7b5f6f4e68a3421ab33d7780995080deb6cf2238
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154308
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>
(cherry picked from commit 9a148e4fb402d203ab0d2683dc316aa8217b576c)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154425
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>
(cherry picked from commit 00c7728e128c52c6acecf022823408da2cee0be9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154967
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: René Engelhard <rene@debian.org>
Reviewed-by: René Engelhard <rene@debian.org>
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>